--- a/packages/fspiop-utils-lib/package.json
+++ b/packages/fspiop-utils-lib/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@mojaloop/interop-apis-bc-fspiop-api-svc",
-  "version": "0.0.1",
-  "description": "Mojaloop vNext FSPIOP API Service",
+  "name": "@mojaloop/interop-apis-bc-fspiop-utils-lib",
+  "version": "0.1.0",
+  "description": "Mojaloop vNext FSPIOP utils lib",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/modules/fspiop-api-svc",
+  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/modules/fspiop-utils-lib",
   "private": true,
   "bugs": {
     "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "start": "npm run service",
-    "service": "tsc && node dist/index.js",
+    "service": "tsc && node dist/application/index.js",
     "build": "tsc",
     "watch": "tsc -w",
     "clean:dist": "rm -Rf dist",
@@ -36,16 +36,9 @@
     "dep:update": "ncu -e 2 -u"
   },
   "dependencies": {
-    "@mojaloop/auditing-bc-client-lib": "~0.0.6",
-    "@mojaloop/auditing-bc-public-types-lib": "~0.0.7",
-    "@mojaloop/interop-apis-bc-fspiop-utils-lib": "~0.1.0",
-    "@mojaloop/logging-bc-client-lib": "~0.1.14",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.0",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.0",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.0",
-    "express": "~4.18.1"
+
   },
   "devDependencies": {
-    "@types/express": "~4.17.14"
+
   }
 }
