--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -36,13 +36,13 @@
     "dep:update": "ncu -e 2 -u"
   },
   "dependencies": {
-    "@mojaloop/auditing-bc-client-lib": "~0.0.6",
-    "@mojaloop/auditing-bc-public-types-lib": "~0.0.7",
-    "@mojaloop/interop-apis-bc-fspiop-utils-lib": "~0.1.0",
+    "@mojaloop/auditing-bc-client-lib": "~0.0.7",
+    "@mojaloop/auditing-bc-public-types-lib": "~0.0.8",
     "@mojaloop/logging-bc-client-lib": "~0.1.15",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.3",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.0",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.0",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.0",
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.3",
+    "axios": "^0.27.2",
     "express": "~4.18.1"
   },
   "devDependencies": {
