--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -38,11 +38,12 @@
   "dependencies": {
     "@mojaloop/auditing-bc-client-lib": "~0.0.7",
     "@mojaloop/auditing-bc-public-types-lib": "~0.0.8",
-    "@mojaloop/central-services-shared": "17.0.2",
+    "@mojaloop/interop-apis-bc-fspiop-utils-lib": "*",
     "@mojaloop/logging-bc-client-lib": "~0.1.15",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.4",
+    "@mojaloop/participants-bc": "~0.0.1",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.5",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.0",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.3",
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.5",
     "axios": "^0.27.2",
     "express": "~4.18.1"
   },
