--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
   },
   "contributors": [
-    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
+    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>",
+    "Jose Antunes <jose.antunes@arg.software>",
+    "Rui Rocha <rui.rocha@arg.software>"
   ],
   "scripts": {
     "prepare": "husky install",
@@ -34,23 +36,23 @@
     "dep:update": "ncu -e 2 -u && npm -ws --parallel run dep:update"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.23",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
     "husky": "^8.0.1",
-    "jest": "^29.1.1",
-    "npm-check-updates": "^16.3.3",
-    "ts-jest": "^29.0.2",
+    "jest": "^29.1.2",
+    "npm-check-updates": "^16.3.8",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "workspaces": [
     "packages/fspiop-utils-lib",
-    "packages/*"
+    "packages/fspiop-api-svc"
   ],
   "dependencies": {
-    "bignumber.js": "^9.1.0",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.8"
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.9",
+    "bignumber.js": "^9.1.0"
   }
 }
