--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "watch": "npm -ws --parallel  run watch",
     "clean": "npm run clean:dist",
     "clean:npm": "rm -Rf node_modules && npm -ws --parallel  run clean:npm",
-    "clean:dist": "npm -ws --parallel --if-present run clean:dist",
+    "clean:dist": "rm -Rf dist; npm -ws --parallel --if-present run clean:dist",
     "pretest": "echo 'FIX ME'",
     "standard": "npm run --no-progress --stream lint'",
     "lint": "npm -ws run lint",
