--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -43,8 +43,11 @@
     "@mojaloop/interop-apis-bc-fspiop-utils-lib": "0.1.0",
     "@mojaloop/logging-bc-client-lib": "~0.1.15",
     "@mojaloop/logging-bc-public-types-lib": "^0.1.12",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.15",
+    "@mojaloop/participant-bc-public-types-lib": "~0.0.3",
+    "@mojaloop/participants-bc-client-lib": "~0.0.5",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.2.16",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.12",
+    "@mojaloop/security-bc-client-lib": "^0.0.57",
     "axios": "^1.1.2",
     "express": "~4.18.2"
   },
