--- a/package.json
+++ b/package.json
@@ -37,13 +37,15 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.5",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@types/node": "^18.11.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
     "husky": "^8.0.1",
     "jest": "^29.2.2",
-    "npm-check-updates": "^16.3.15",
+    "jest-openapi": "^0.14.2",
+    "npm-check-updates": "^16.3.16",
+    "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
