[ci skip] increasing test coverage

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "standard": "npm run --no-progress --stream lint'",
     "lint": "npm -ws run lint",
     "lint:fix": "npm -ws run lint:fix",
-    "test:unit": "npm -ws run test:unit",
+    "test:unit": "npm run test:unit --forceExit -ws",
     "test:coverage": "npm -ws --parallel run test:coverage",
     "test:coverage-check": "npm -ws --parallel run test:coverage-check",
-    "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
+    "test:integration": "npm run test:integration -ws --parallel",
     "audit:resolve": "npm -ws --parallel run audit:resolve",
     "audit:check": "npm -ws --parallel run audit:check",
     "dep:check": "ncu -e 2 && npm -ws --parallel run dep:check",
