--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -30,8 +30,8 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
-    "test:integration": "jest --passWithNoTests --testMatch **/test/integration/**/*.test.ts --silent --runInBand",
-    "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/integration/**/*.test.ts --detectOpenHandles",
+    "test:integration": "jest --passWithNoTests --testMatch **/test/integration/**/*.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/integration/**/*.test.ts",
     "test:coverage-check": "jest --coverage --testMatch **/test/integration/**/*.test.ts",
     "audit:resolve": "SHELL=sh resolve-audit",
     "audit:check": "SHELL=sh check-audit",
@@ -41,18 +41,19 @@
   "dependencies": {
     "@mojaloop/auditing-bc-client-lib": "~0.0.10",
     "@mojaloop/auditing-bc-public-types-lib": "~0.0.11",
-    "@mojaloop/logging-bc-client-lib": "~0.1.15",
-    "@mojaloop/logging-bc-public-types-lib": "^0.1.12",
+    "@mojaloop/logging-bc-client-lib": "~0.1.16",
+    "@mojaloop/logging-bc-public-types-lib": "^0.1.13",
     "@mojaloop/participant-bc-public-types-lib": "~0.0.4",
     "@mojaloop/participants-bc-client-lib": "~0.0.6",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.2.16",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.13",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.2.18",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.15",
     "@mojaloop/security-bc-client-lib": "^0.0.60",
     "axios": "^1.1.3",
     "express": "~4.18.2"
   },
   "devDependencies": {
     "@types/express": "~4.17.14",
+    "@types/supertest": "^2.0.12",
     "jest-openapi": "^0.14.2",
     "kafka-node": "^5.0.0",
     "wait-for-expect": "^3.0.2"
