--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -30,7 +30,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
-    "test:integration": "jest --passWithNoTests --testMatch **/test/integration/**/*.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:integration": "jest --passWithNoTests --rootDir='../../' --testMatch **/test/integration/**/*.test.ts --runInBand --detectOpenHandles --forceExit",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/integration/**/*.test.ts",
     "test:coverage-check": "jest --coverage --testMatch **/test/integration/**/*.test.ts",
     "audit:resolve": "SHELL=sh resolve-audit",
