--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -45,9 +45,10 @@
     "@mojaloop/logging-bc-public-types-lib": "^0.1.13",
     "@mojaloop/participant-bc-public-types-lib": "~0.0.4",
     "@mojaloop/participants-bc-client-lib": "~0.0.6",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.2.18",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.15",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.2.19",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.16",
     "@mojaloop/security-bc-client-lib": "^0.0.60",
+    "ajv": "^8.11.2",
     "axios": "^1.1.3",
     "express": "~4.18.2"
   },
