[ci skip] wip adding integration tests to quoting-bc related events and routes

--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -30,9 +30,9 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
-    "test:integration": "jest --passWithNoTests --rootDir='../../' --testMatch **/test/integration/**/*.test.ts --runInBand --detectOpenHandles --forceExit",
-    "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/integration/**/*.test.ts",
-    "test:coverage-check": "jest --coverage --testMatch **/test/integration/**/*.test.ts",
+    "test:integration": "jest --passWithNoTests --rootDir='../../' --testMatch **/test/integration/**/*.test.ts --runInBand --detectOpenHandles --coverage --forceExit",
+    "test:coverage": "jest --rootDir='../../' --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/integration/**/*.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:coverage-check": "jest --rootDir='../../' --coverage --testMatch **/test/integration/**/*.test.ts --runInBand --detectOpenHandles --forceExit",
     "audit:resolve": "SHELL=sh resolve-audit",
     "audit:check": "SHELL=sh check-audit",
     "dep:check": "ncu -e 2",
