--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:integration": "npm run test:integration -ws --parallel",
     "audit:resolve": "npm -ws --parallel run audit:resolve",
     "audit:check": "npm -ws --parallel run audit:check",
-    "dep:check": "ncu -e 2 && npm -ws --parallel run dep:check",
-    "dep:update": "ncu -e 2 -u && npm -ws --parallel run dep:update"
+    "dep:check": "ncu -e 2; npm -ws run dep:check",
+    "dep:update": "ncu -e 2 -u; npm -ws run dep:update"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
@@ -51,12 +51,11 @@
     "typescript": "^4.9.5"
   },
   "workspaces": [
-    "packages/implementations",
     "packages/fspiop-utils-lib",
-    "packages/fspiop-api-svc"
+    "packages/fspiop-api-svc",
+    "packages/*"
   ],
   "dependencies": {
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.67",
     "bignumber.js": "^9.1.1"
   }
 }
