--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   ],
   "scripts": {
     "prepare": "husky install",
+    "pre_commit_check": "npm run build && npm run lint && npm run test:unit",
     "start": "npm -ws --parallel -v run start",
     "start:fspiop-api-svc": "npm -w @mojaloop/interop-apis-bc-fspiop-api-svc run start",
     "build": "npm -ws run build",
     "docker:build": "npm run build && docker build . -t \"mojaloop/interop-apis-bc-fspiop-api-svc\"",
     "watch": "npm -ws --parallel  run watch",
-    "clean": "npm run clean:dist",
-    "clean:npm": "rm -Rf node_modules && npm -ws --parallel  run clean:npm",
-    "clean:dist": "rm -Rf dist && npm -ws --parallel --if-present run clean:dist",
+    "clean": "npm run clean:dist; npm run clean:npm",
+    "clean:npm": "rm -Rf node_modules; npm -ws run clean:npm",
+    "clean:dist": "rm -Rf dist; npm -ws run clean:dist",
     "pretest": "echo 'FIX ME'",
     "standard": "npm run --no-progress --stream lint'",
     "lint": "npm -ws run lint",
@@ -37,18 +38,18 @@
     "dep:update": "ncu -e 2 -u; npm -ws run dep:update"
   },
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint": "^8.34.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
     "husky": "^8.0.3",
-    "jest": "^29.4.3",
+    "jest": "^29.5.0",
     "jest-openapi": "^0.14.2",
-    "npm-check-updates": "^16.7.4",
+    "npm-check-updates": "^16.7.12",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   },
   "workspaces": [
     "packages/fspiop-utils-lib",
