--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@mojaloop/interop-apis-bc-fspiop-api-svc",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "description": "Mojaloop vNext FSPIOP API Service",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/modules/fspiop-api-svc",
+  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-api-svc",
   "private": true,
   "bugs": {
     "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
@@ -24,8 +24,9 @@
     "service": "node dist/index.js",
     "build": "tsc",
     "watch": "tsc -w",
-    "clean:dist": "rm -Rf dist",
-    "clean:npm": "rm -Rf node_modules",
+    "clean": "npm run clean:npm; npm run clean:dist",
+    "clean:dist": "rm -rf dist",
+    "clean:npm": "rm -rf node_modules",
     "pretest": "npm run build",
     "standard": "npm run lint",
     "lint": "eslint ./src",
@@ -40,18 +41,18 @@
     "dep:update": "ncu -e 2 -u"
   },
   "dependencies": {
-    "@mojaloop/auditing-bc-client-lib": "~0.0.11",
-    "@mojaloop/auditing-bc-public-types-lib": "~0.0.12",
-    "@mojaloop/logging-bc-client-lib": "~0.1.18",
-    "@mojaloop/logging-bc-public-types-lib": "^0.1.15",
-    "@mojaloop/participant-bc-public-types-lib": "~0.0.7",
-    "@mojaloop/participants-bc-client-lib": "~0.1.3",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.70",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.70",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.31",
-    "@mojaloop/security-bc-client-lib": "^0.1.12",
+    "@mojaloop/auditing-bc-client-lib": "~0.0.12",
+    "@mojaloop/auditing-bc-public-types-lib": "~0.0.13",
+    "@mojaloop/logging-bc-client-lib": "~0.1.19",
+    "@mojaloop/logging-bc-public-types-lib": "^0.1.16",
+    "@mojaloop/participant-bc-public-types-lib": "~0.0.8",
+    "@mojaloop/participants-bc-client-lib": "~0.1.4",
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.73",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.73",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.34",
+    "@mojaloop/security-bc-client-lib": "^0.1.23",
     "ajv": "^8.12.0",
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
     "express": "~4.18.2"
   },
   "devDependencies": {
