--- a/packages/fspiop-utils-lib/package.json
+++ b/packages/fspiop-utils-lib/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Mojaloop vNext FSPIOP utils lib",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/modules/fspiop-utils-lib",
+  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-utils-lib",
   "private": true,
   "bugs": {
     "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
@@ -23,8 +23,9 @@
     "service": "tsc && node dist/application/index.js",
     "build": "tsc",
     "watch": "tsc -w",
-    "clean:dist": "rm -Rf dist",
-    "clean:npm": "rm -Rf node_modules",
+    "clean": "npm run clean:npm; npm run clean:dist",
+    "clean:dist": "rm -rf dist",
+    "clean:npm": "rm -rf node_modules",
     "pretest": "npm run build",
     "standard": "npm run lint",
     "lint": "eslint ./src",
@@ -38,6 +39,6 @@
     "dep:update": "ncu -e 2 -u"
   },
   "dependencies": {
-    "axios": "^1.3.3"
+    "axios": "^1.3.4"
   }
 }
