--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "pre_commit_check": "npm run build && npm run lint && npm run test:unit",
     "start": "npm -ws --parallel -v run start",
     "start:fspiop-api-svc": "npm -w @mojaloop/interop-apis-bc-fspiop-api-svc run start",
     "build": "npm -ws run build",
     "docker:build": "npm run build && docker build . -t \"mojaloop/interop-apis-bc-fspiop-api-svc\"",
     "watch": "npm -ws --parallel  run watch",
-    "clean": "npm run clean:dist; npm run clean:npm",
-    "clean:npm": "rm -Rf node_modules; npm -ws run clean:npm",
-    "clean:dist": "rm -Rf dist; npm -ws run clean:dist",
+    "clean": "npm run clean:dist",
+    "clean:npm": "rm -Rf node_modules && npm -ws --parallel  run clean:npm",
+    "clean:dist": "rm -Rf dist && npm -ws --parallel --if-present run clean:dist",
     "pretest": "echo 'FIX ME'",
     "standard": "npm run --no-progress --stream lint'",
     "lint": "npm -ws run lint",
@@ -34,31 +33,33 @@
     "test:integration": "npm run test:integration -ws --parallel",
     "audit:resolve": "npm -ws --parallel run audit:resolve",
     "audit:check": "npm -ws --parallel run audit:check",
-    "dep:check": "ncu -e 2; npm -ws run dep:check",
-    "dep:update": "ncu -e 2 -u; npm -ws run dep:update"
+    "dep:check": "ncu -e 2 && npm -ws --parallel run dep:check",
+    "dep:update": "ncu -e 2 -u && npm -ws --parallel run dep:update"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.2.3",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.27.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "jest-openapi": "^0.14.2",
-    "npm-check-updates": "^16.7.12",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "kafkajs": "^2.2.4",
+    "npm-check-updates": "^16.4.1",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   },
   "workspaces": [
+    "packages/implementations",
     "packages/fspiop-utils-lib",
-    "packages/fspiop-api-svc",
-    "packages/*"
+    "packages/fspiop-api-svc"
   ],
   "dependencies": {
-    "bignumber.js": "^9.1.1",
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.31",
+    "bignumber.js": "^9.1.0",
     "express-openapi-validate": "^0.6.1",
     "js-yaml": "^4.1.0"
   }
