--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dep:update": "ncu -e 2 -u && npm -ws --parallel run dep:update"
   },
   "devDependencies": {
+    "@mojaloop/interop-apis-bc-shared-mocks-lib": "*",
     "@types/jest": "^29.2.3",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.9",
@@ -55,7 +56,9 @@
   "workspaces": [
     "packages/implementations",
     "packages/fspiop-utils-lib",
-    "packages/fspiop-api-svc"
+    "packages/fspiop-api-svc",
+    "packages/shared-mocks-lib"
+
   ],
   "dependencies": {
     "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.31",
