Latest CI/CD scripts #2

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "test:coverage": "npm -ws --parallel run test:coverage",
     "test:coverage-check": "npm -ws --parallel run test:coverage-check",
     "test:integration": "npm run test:integration -ws --parallel",
+    "posttest": "npm run coverage:merge && npm run coverage:gen-report",
+    "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
+    "coverage:gen-report": "nyc report --reporter=lcov --temp-dir=./coverage",
     "audit:resolve": "npm -ws --parallel run audit:resolve",
     "audit:check": "npm -ws --parallel run audit:check",
     "dep:check": "ncu -e 2; npm -ws run dep:check",
@@ -45,6 +48,7 @@
     "eslint": "^8.36.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "nyc": "^15.1.0",
     "jest-openapi": "^0.14.2",
     "npm-check-updates": "^16.7.12",
     "supertest": "^6.3.3",
