--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -5,6 +5,9 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-api-svc",
   "private": true,
+  "mojaloop": {
+    "publish_to_dockerhub": true
+  },
   "bugs": {
     "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
   },
