Removed package-lock.json from fspiop-api-svc and fixed main scripts

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "scripts": {
     "prepare": "husky install",
     "pre_commit_check": "npm run build && npm run lint && npm run test:unit",
-    "start": "npm -ws --parallel -v run start",
+    "start": "npm -ws -v run start",
     "start:fspiop-api-svc": "npm -w @mojaloop/interop-apis-bc-fspiop-api-svc run start",
     "build": "npm -ws run build",
-    "watch": "npm -ws --parallel  run watch",
+    "watch": "npm -ws  run watch",
     "clean": "npm run clean:dist; npm run clean:npm",
     "clean:npm": "rm -Rf node_modules; npm -ws run clean:npm",
     "clean:dist": "rm -Rf dist; npm -ws run clean:dist",
@@ -28,14 +28,14 @@
     "lint": "npm -ws run lint",
     "lint:fix": "npm -ws run lint:fix",
     "test:unit": "npm run test:unit --forceExit -ws",
-    "test:coverage": "npm -ws --parallel run test:coverage",
-    "test:coverage-check": "npm -ws --parallel run test:coverage-check",
+    "test:coverage": "npm -ws run test:coverage",
+    "test:coverage-check": "npm -ws run test:coverage-check",
     "test:integration": "npm run test:integration -ws --parallel",
     "posttest": "npm run coverage:merge && npm run coverage:gen-report",
     "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
     "coverage:gen-report": "nyc report --reporter=lcov --temp-dir=./coverage",
-    "audit:resolve": "npm -ws --parallel run audit:resolve",
-    "audit:check": "npm -ws --parallel run audit:check",
+    "audit:resolve": "npm -ws run audit:resolve",
+    "audit:check": "npm -ws run audit:check",
     "dep:check": "ncu -e 2; npm -ws run dep:check",
     "dep:update": "ncu -e 2 -u; npm -ws run dep:update"
   },
