[ci skip] wip replacing request header validation to maintain consistency with present implementation

--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -62,5 +62,13 @@
     "jest-openapi": "^0.14.2",
     "kafka-node": "^5.0.0",
     "wait-for-expect": "^3.0.2"
+  },
+  "peerDependencies": {
+    "@mojaloop/central-services-error-handling": "12.x.x"
+  },
+  "peerDependenciesMeta": {
+    "@mojaloop/central-services-error-handling": {
+      "optional": false
+    }
   }
 }
