--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -27,7 +27,7 @@
     "service": "node dist/index.js",
     "build": "tsc && cp api-specs/api_spec.yaml dist",
     "watch": "tsc -w",
-    "clean": "npm run clean:npm; npm run clean:dist",
+    "clean": "(npm run clean:npm || true) && npm run clean:dist",
     "clean:dist": "rm -rf dist",
     "clean:npm": "rm -rf node_modules",
     "pretest": "npm run build",
@@ -51,7 +51,7 @@
     "@mojaloop/logging-bc-public-types-lib": "^0.1.19",
     "@mojaloop/participant-bc-public-types-lib": "~0.0.8",
     "@mojaloop/participants-bc-client-lib": "~0.1.4",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.105",
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.106",
     "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.98",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.59",
     "@mojaloop/security-bc-client-lib": "^0.1.31",
