[ci skip] fixed lint issues on header validation files and removed central-services-error-handling from the dependencies

--- a/packages/fspiop-api-svc/.eslintrc
+++ b/packages/fspiop-api-svc/.eslintrc
@@ -1,5 +1,6 @@
 {
     "root": true,
-    "extends": ["../../.eslintrc"],
-    "ignorePatterns": [ "validation.ts", "headerValidation.ts"  ]
+    "extends": [
+        "../../.eslintrc"
+    ]
 }
