--- a/package.json
+++ b/package.json
@@ -45,16 +45,17 @@
     "@mojaloop/ml-testing-toolkit-client-lib": "^1.2.0",
     "@types/jest": "^29.5.1",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.2.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "nyc": "^15.1.0",
     "jest-openapi": "^0.14.2",
     "kafkajs": "^2.2.4",
     "npm-check-updates": "^16.10.12",
+    "nyc": "^15.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
