--- a/package.json
+++ b/package.json
@@ -41,10 +41,7 @@
     "dep:update": "(ncu -e 2 -u || true) && npm -ws run dep:update"
   },
   "devDependencies": {
-    "@mojaloop/interop-apis-bc-shared-mocks-lib": "*",
-    "@mojaloop/ml-testing-toolkit-client-lib": "^1.2.0",
     "@types/jest": "^29.5.3",
-    "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -52,7 +49,6 @@
     "eslint": "^8.43.0",
     "jest": "^29.5.0",
     "jest-openapi": "^0.14.2",
-    "kafkajs": "^2.2.4",
     "npm-check-updates": "^16.10.17",
     "nyc": "^15.1.0",
     "supertest": "^6.3.3",
@@ -66,9 +62,6 @@
     "packages/shared-mocks-lib"
   ],
   "dependencies": {
-    "husky": "^8.0.3",
-    "bignumber.js": "^9.1.1",
-    "express-openapi-validate": "^0.6.1",
-    "js-yaml": "^4.1.0"
+    "husky": "^8.0.3"
   }
 }
