--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -58,13 +58,15 @@
     "@mojaloop/security-bc-client-lib": "~0.1.32",
     "ajv": "^8.12.0",
     "axios": "^1.4.0",
-    "express": "~4.18.2"
+    "express": "~4.18.2",
+    "express-openapi-validate": "^0.6.1",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/express": "~4.17.17",
     "@types/supertest": "^2.0.12",
     "jest-openapi": "^0.14.2",
-    "kafka-node": "^5.0.0",
-    "wait-for-expect": "^3.0.2"
+    "wait-for-expect": "^3.0.2",
+    "@types/js-yaml": "^4.0.5"
   }
 }
