fixed script of package.json for testing

--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "clean:npm": "(rm -Rf node_modules || true) && npm -ws run clean:npm",
     "clean:dist": "(rm -Rf dist || true) && npm -ws run clean:dist",
     "docker:build": "npm run build && docker build . -t \"mojaloop/interop-apis-bc-fspiop-api-svc\"",
-    "pretest": "echo 'FIX ME'",
+    "pretest": "npm run build",
     "standard": "npm run --no-progress --stream lint'",
     "lint": "npm -ws run lint",
     "lint:fix": "npm -ws run lint:fix",
+    "test": "npm run test:unit && npm run test:integration",
     "test:unit": "npm run test:unit --forceExit -ws",
     "test:coverage": "npm -ws run test:coverage",
     "test:coverage-check": "npm -ws run test:coverage-check",
-    "test:integration": "npm run test:integration -ws --parallel",
+    "test:integration": "jest",
     "posttest": "npm run coverage:merge && npm run coverage:gen-report",
     "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
     "coverage:gen-report": "nyc report --reporter=lcov --temp-dir=./coverage",
