--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "lint": "npm -ws run lint",
     "lint:fix": "npm -ws run lint:fix",
     "test": "npm run test:unit && npm run test:integration",
-    "test:unit": "npm run test:unit --forceExit -ws",
+    "test:unit": "npm -ws --if-present run test:unit",
     "test:coverage": "npm -ws run test:coverage",
     "test:coverage-check": "npm -ws run test:coverage-check",
-    "test:integration": "jest",
+    "test:integration": "jest --runInBand --forceExit --detectOpenHandles",
     "posttest": "npm run coverage:merge && npm run coverage:gen-report",
     "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
-    "coverage:gen-report": "nyc report --reporter=lcov --temp-dir=./coverage",
+    "coverage:gen-report": "nyc report --reporter=lcov --reporter=text --temp-dir=./coverage",
     "audit:resolve": "npm -ws run audit:resolve",
     "audit:check": "npm -ws run audit:check",
     "dep:check": "(ncu -e 2 || true) && npm -ws run dep:check",
