--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -35,6 +35,7 @@
     "standard": "npm run lint",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
+    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts --detectOpenHandles",
     "test:ttk-use-cases": "npx ml-ttk-cli --mode outbound --input-files=./api-specs/working_paths.json --environment-file ./api-specs/examples_environments_hub_local_environment.json --report-format html",
     "audit:resolve": "SHELL=sh resolve-audit",
     "audit:check": "SHELL=sh check-audit",
@@ -48,7 +49,7 @@
     "@mojaloop/logging-bc-public-types-lib": "^0.1.19",
     "@mojaloop/participant-bc-public-types-lib": "~0.0.14",
     "@mojaloop/participants-bc-client-lib": "~0.1.13",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.146",
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.147",
     "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.101",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.67",
     "@mojaloop/security-bc-client-lib": "~0.1.32",
