--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
-    "@types/lodash": "^4.14.196",
     "@types/node": "^20.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -57,10 +56,10 @@
     "typescript": "^5.1.6"
   },
   "workspaces": [
-    "packages/implementations",
     "packages/fspiop-utils-lib",
     "packages/fspiop-api-svc",
-    "packages/shared-mocks-lib"
+    "packages/shared-mocks-lib",
+    "packages/*"
   ],
   "dependencies": {
     "husky": "^8.0.3"
