--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "mongodb": "^5.3.0",
     "npm-check-updates": "^16.10.19",
     "nyc": "^15.1.0",
-    "tslib": "~2.6.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "tslib": "~2.6.2",
     "typescript": "^5.1.6"
   },
   "workspaces": [
@@ -64,6 +64,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "ilp-packet": "^2.2.0"
   }
 }
