--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -49,9 +49,11 @@
     "@mojaloop/logging-bc-public-types-lib": "^0.1.22",
     "@mojaloop/participant-bc-public-types-lib": "~0.0.19",
     "@mojaloop/participants-bc-client-lib": "~0.1.15",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.163",
+    "@mojaloop/platform-configuration-bc-client-lib": "^0.3.8",
+    "@mojaloop/platform-configuration-bc-public-types-lib": "^0.3.5",
     "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.103",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.71",
+    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.163",
     "@mojaloop/security-bc-client-lib": "~0.3.7",
     "@mojaloop/security-bc-public-types-lib": "~0.3.5",
     "ajv": "^8.12.0",
@@ -62,9 +64,8 @@
   },
   "devDependencies": {
     "@types/express": "~4.17.21",
+    "@types/js-yaml": "^4.0.9",
     "@types/supertest": "^2.0.16",
-    "jest-openapi": "^0.14.2",
-    "wait-for-expect": "^3.0.2",
-    "@types/js-yaml": "^4.0.9"
+    "jest-openapi": "^0.14.2"
   }
 }
