--- a/packages/shared-mocks-lib/package.json
+++ b/packages/shared-mocks-lib/package.json
@@ -29,6 +29,7 @@
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "@mojaloop/platform-configuration-bc-public-types-lib": "^0.3.5",
     "@mojaloop/security-bc-public-types-lib": "~0.3.5"
   },
   "devDependencies": {
