--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -54,10 +54,11 @@
     "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.103",
     "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.71",
     "@mojaloop/platform-shared-lib-public-messages-lib": "~0.1.163",
-    "@mojaloop/security-bc-client-lib": "~0.3.7",
-    "@mojaloop/security-bc-public-types-lib": "~0.3.5",
+    "@mojaloop/security-bc-client-lib": "~0.3.8",
+    "@mojaloop/security-bc-public-types-lib": "~0.3.6",
     "ajv": "^8.12.0",
     "axios": "^1.4.0",
+    "base64url": "^3.0.1",
     "express": "~4.18.2",
     "express-openapi-validate": "^0.6.1",
     "js-yaml": "^4.1.0"
