[ci skip] added jws keys fetch from local file structure

--- a/packages/fspiop-api-svc/Dockerfile
+++ b/packages/fspiop-api-svc/Dockerfile
@@ -43,6 +43,8 @@ FROM node:18.13-alpine
 WORKDIR /app
 RUN mkdir /app/data
 
+VOLUME /app/data/keys
+
 RUN apk add librdkafka
 
 COPY --from=builder /app .
