--- a/packages/shared-mocks-lib/package.json
+++ b/packages/shared-mocks-lib/package.json
@@ -29,8 +29,8 @@
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
-    "@mojaloop/platform-configuration-bc-public-types-lib": "^0.3.5",
-    "@mojaloop/security-bc-public-types-lib": "~0.3.6"
+    "@mojaloop/platform-configuration-bc-public-types-lib": "~0.5.2",
+    "@mojaloop/security-bc-public-types-lib": "~0.5.5"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
