--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -1,72 +1,75 @@
 {
-  "name": "@mojaloop/interop-apis-bc-fspiop-api-svc",
-  "version": "0.3.20",
-  "description": "Mojaloop vNext FSPIOP API Service",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-api-svc",
-  "private": true,
-  "mojaloop": {
-    "publish_to_dockerhub": true
-  },
-  "bugs": {
-    "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
-  },
-  "contributors": [
-    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>",
-    "Jose Antunes <jose.antunes@arg.software>",
-    "Rui Rocha <rui.rocha@arg.software>"
-  ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
-  "scripts": {
-    "start": "npm run service",
-    "start:dev": "npm run build && npm run environment:dev && npm start",
-    "environment:dev": "(AUDIT_KEY_FILE_PATH = ./dist/tmp_key_file) || (set AUDIT_KEY_FILE_PATH = ./dist/tmp_key_file)",
-    "service": "node dist/index.js",
-    "build": "tsc && cp api-specs/api_spec.yaml dist",
-    "watch": "tsc -w",
-    "clean": "(npm run clean:npm || true) && npm run clean:dist",
-    "clean:dist": "rm -rf dist",
-    "clean:npm": "rm -rf node_modules",
-    "pretest": "npm run build",
-    "standard": "npm run lint",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts --runInBand",
-    "test:ttk-use-cases": "npx ml-ttk-cli --mode outbound --input-files=./api-specs/working_paths.json --environment-file ./api-specs/examples_environments_hub_local_environment.json --report-format html",
-    "audit:resolve": "SHELL=sh resolve-audit",
-    "audit:check": "SHELL=sh check-audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -e 2 -u"
-  },
-  "dependencies": {
-    "@mojaloop/auditing-bc-client-lib": "~0.5.1",
-    "@mojaloop/auditing-bc-public-types-lib": "~0.5.1",
-    "@mojaloop/logging-bc-client-lib": "~0.5.2",
-    "@mojaloop/logging-bc-public-types-lib": "~0.5.2",
-    "@mojaloop/participant-bc-public-types-lib": "~0.5.1",
-    "@mojaloop/participants-bc-client-lib": "~0.5.2",
-    "@mojaloop/platform-configuration-bc-client-lib": "~0.5.1",
-    "@mojaloop/platform-configuration-bc-public-types-lib": "~0.5.2",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.5.2",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.2",
-    "@mojaloop/platform-shared-lib-public-messages-lib": "~0.5.4",
-    "@mojaloop/security-bc-client-lib": "~0.5.7",
-    "@mojaloop/security-bc-public-types-lib": "~0.5.5",
-    "ajv": "^8.12.0",
-    "axios": "^1.4.0",
-    "base64url": "^3.0.1",
-    "express": "~4.18.2",
-    "express-openapi-validate": "^0.6.1",
-    "js-yaml": "^4.1.0"
-  },
-  "devDependencies": {
-    "@types/express": "~4.17.21",
-    "@types/js-yaml": "^4.0.9",
-    "@types/supertest": "^2.0.16",
-    "jest-openapi": "^0.14.2"
-  }
+    "name": "@mojaloop/interop-apis-bc-fspiop-api-svc",
+    "version": "0.5.0",
+    "description": "Mojaloop vNext FSPIOP API Service",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-api-svc",
+    "private": true,
+    "mojaloop": {
+        "publish_to_dockerhub": true
+    },
+    "bugs": {
+        "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
+    },
+    "contributors": [
+        "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>",
+        "Jose Antunes <jose.antunes@arg.software>",
+        "Rui Rocha <rui.rocha@arg.software>"
+    ],
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "start": "npm run service",
+        "start:dev": "npm run build && npm run environment:dev && npm start",
+        "environment:dev": "(AUDIT_KEY_FILE_PATH = ./dist/tmp_key_file) || (set AUDIT_KEY_FILE_PATH = ./dist/tmp_key_file)",
+        "service": "node dist/index.js",
+        "build": "tsc && cp api-specs/api_spec.yaml dist",
+        "watch": "tsc -w",
+        "clean": "(npm run clean:npm || true) && npm run clean:dist",
+        "clean:dist": "rm -rf dist",
+        "clean:npm": "rm -rf node_modules",
+        "pretest": "npm run build",
+        "standard": "npm run lint",
+        "lint": "eslint ./src",
+        "lint:fix": "eslint ./src --fix",
+        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts --runInBand",
+        "test:ttk-use-cases": "npx ml-ttk-cli --mode outbound --input-files=./api-specs/working_paths.json --environment-file ./api-specs/examples_environments_hub_local_environment.json --report-format html",
+        "audit:resolve": "SHELL=sh resolve-audit",
+        "audit:check": "SHELL=sh check-audit",
+        "dep:check": "ncu -e 2",
+        "dep:update": "ncu -e 2 -u"
+    },
+    "dependencies": {
+        "@mojaloop/auditing-bc-client-lib": "~0.5.1",
+        "@mojaloop/auditing-bc-public-types-lib": "~0.5.1",
+        "@mojaloop/logging-bc-client-lib": "~0.5.2",
+        "@mojaloop/logging-bc-public-types-lib": "~0.5.2",
+        "@mojaloop/participant-bc-public-types-lib": "~0.5.1",
+        "@mojaloop/participants-bc-client-lib": "~0.5.2",
+        "@mojaloop/platform-configuration-bc-client-lib": "~0.5.2",
+        "@mojaloop/platform-configuration-bc-public-types-lib": "~0.5.2",
+        "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.5.2",
+        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.2",
+        "@mojaloop/platform-shared-lib-public-messages-lib": "~0.5.4",
+        "@mojaloop/security-bc-client-lib": "~0.5.7",
+        "@mojaloop/security-bc-public-types-lib": "~0.5.5",
+        "ajv": "^8.12.0",
+        "axios": "^1.4.0",
+        "base64url": "^3.0.1",
+        "express": "~4.18.2",
+        "express-openapi-validate": "^0.6.1",
+        "js-yaml": "^4.1.0"
+    },
+    "devDependencies": {
+        "@types/express": "~4.17.21",
+        "@types/js-yaml": "^4.0.9",
+        "@types/supertest": "^2.0.16",
+        "jest-openapi": "^0.14.2"
+    },
+    "engines": {
+        "node": ">=20.10.0"
+    }
 }
