--- a/packages/fspiop-utils-lib/package.json
+++ b/packages/fspiop-utils-lib/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "@mojaloop/interop-apis-bc-fspiop-utils-lib",
-  "version": "0.1.0",
-  "description": "Mojaloop vNext FSPIOP utils lib",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-utils-lib",
-  "private": true,
-  "bugs": {
-    "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
-  },
-  "contributors": [
-    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>",
-    "Jose Antunes <jose.antunes@arg.software>",
-    "Rui Rocha <rui.rocha@arg.software>"
-  ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
-  "scripts": {
-    "start": "npm run service",
-    "service": "tsc && node dist/application/index.js",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "(npm run clean:npm || true) && npm run clean:dist",
-    "clean:dist": "rm -rf dist",
-    "clean:npm": "rm -rf node_modules",
-    "pretest": "npm run build",
-    "standard": "npm run lint",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
-    "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/unit/**/*.test.ts",
-    "test:coverage-check": "jest --coverage --testMatch **/test/unit/**/*.test.ts",
-    "audit:resolve": "SHELL=sh resolve-audit",
-    "audit:check": "SHELL=sh check-audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -e 2 -u"
-  },
-  "dependencies": {
-    "axios": "^1.4.0"
-  }
+    "name": "@mojaloop/interop-apis-bc-fspiop-utils-lib",
+    "version": "0.5.0",
+    "description": "Mojaloop vNext FSPIOP utils lib",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-utils-lib",
+    "private": true,
+    "bugs": {
+        "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
+    },
+    "contributors": [
+        "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>",
+        "Jose Antunes <jose.antunes@arg.software>",
+        "Rui Rocha <rui.rocha@arg.software>"
+    ],
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "start": "npm run service",
+        "service": "tsc && node dist/application/index.js",
+        "build": "tsc",
+        "watch": "tsc -w",
+        "clean": "(npm run clean:npm || true) && npm run clean:dist",
+        "clean:dist": "rm -rf dist",
+        "clean:npm": "rm -rf node_modules",
+        "pretest": "npm run build",
+        "standard": "npm run lint",
+        "lint": "eslint ./src",
+        "lint:fix": "eslint ./src --fix",
+        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
+        "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/unit/**/*.test.ts",
+        "test:coverage-check": "jest --coverage --testMatch **/test/unit/**/*.test.ts",
+        "audit:resolve": "SHELL=sh resolve-audit",
+        "audit:check": "SHELL=sh check-audit",
+        "dep:check": "ncu -e 2",
+        "dep:update": "ncu -e 2 -u"
+    },
+    "dependencies": {
+        "axios": "^1.4.0"
+    },
+    "engines": {
+        "node": ">=20.10.0"
+    }
 }
