--- a/packages/shared-mocks-lib/package.json
+++ b/packages/shared-mocks-lib/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "@mojaloop/interop-apis-bc-shared-mocks-lib",
-  "version": "0.0.1",
-  "description": "Interop APIs BC shared mocks.",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/shared-mocks-lib",
-  "bugs": {
-    "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
-  },
-  "contributors": [
-    "Jose Antunes <jose.antunes@arg.software>",
-    "Rui Rocha <rui.rocha@arg.software>"
-  ],
-  "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
-  "scripts": {
-    "build": "tsc",
-    "clean:dist": "rm -rf dist",
-    "clean:npm": "rm -rf node_modules",
-    "clean": "(npm run clean:npm || true) && npm run clean:dist",
-    "audit:check": "npm npm audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix"
-  },
-  "dependencies": {
-    "@mojaloop/platform-configuration-bc-public-types-lib": "~0.5.2",
-    "@mojaloop/security-bc-public-types-lib": "~0.5.5"
-  },
-  "devDependencies": {
-    "eslint": "^8.43.0",
-    "npm-check-updates": "^16.10.19",
-    "typescript": "^4.7.4"
-  }
+    "name": "@mojaloop/interop-apis-bc-shared-mocks-lib",
+    "version": "0.5.0",
+    "description": "Interop APIs BC shared mocks.",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/shared-mocks-lib",
+    "bugs": {
+        "url": "https://github.com/mojaloop/interop-apis-bc/issues#readme"
+    },
+    "contributors": [
+        "Jose Antunes <jose.antunes@arg.software>",
+        "Rui Rocha <rui.rocha@arg.software>"
+    ],
+    "private": true,
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "build": "tsc",
+        "clean:dist": "rm -rf dist",
+        "clean:npm": "rm -rf node_modules",
+        "clean": "(npm run clean:npm || true) && npm run clean:dist",
+        "audit:check": "npm npm audit",
+        "dep:check": "ncu -e 2",
+        "dep:update": "ncu -u",
+        "lint": "eslint ./src",
+        "lint:fix": "eslint ./src --fix"
+    },
+    "dependencies": {
+        "@mojaloop/platform-configuration-bc-public-types-lib": "~0.5.2",
+        "@mojaloop/security-bc-public-types-lib": "~0.5.5"
+    },
+    "devDependencies": {
+        "eslint": "^8.43.0",
+        "npm-check-updates": "^16.10.19",
+        "typescript": "^4.7.4"
+    },
+    "engines": {
+        "node": ">=20.10.0"
+    }
 }
